<resources>
    <string name="app_name">SMSTool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Setting</string>

    <string name="spinnerTitle">Retrieving Contacts</string>
    <string name="blank_photo">blank photo</string>
    <string name="total_blank">TOTAL: 0 INCOMING, 0 OUTGOING MESSAGES</string>
    <string name="total">TOTAL: %1$d INCOMING, %2$d OUTGOING MESSAGES</string>

    <string name="sms_statistics">SMS</string>
    <string name="frm_dt">Start Date</string>
    <string name="to_dt">End Date</string>
    <string name="pop_hlp_ttl">Help</string>
    <string name="pop_abt_ttl">About</string>
    <string name="dev_name">SystemStudio</string>
    <string name="mail_id">$TBD$</string>
    <string name="frm_to_err">Date not enable!</string>
    <string name="Future_Year">Future_Year</string>
    <string name="Future_Month">Future_Month</string>
    <string name="Future_Day">Future_Day</string>

    <string name="add_customer">New User</string>
    <string name="customer">User Info:</string>
    <string name="name">Name:</string>
    <string name="name_null">Name Cannot be null!</string>
    <string name="phoneNum">Tel:</string>
    <string name="phone_null">Tel cannot be null!</string>
    <string name="sex">sex:</string>
    <string name="sex_man">man</string>
    <string name="sex_woman">weman</string>
    <string name="homeAddress">Address:</string>
    <string name="companyAddress">company:</string>
    <string name="register">Date register:</string>
    <string name="date_add">Date Add:</string>
    <string name="remarks">Recommad:</string>
    <string name="submit">Save</string>
    <string name="save_success">Save Success!</string>
    <string name="tip">Tips</string>
    <string name="user_exist">User is exist!</string>

    <string name="search_customer">Search User</string>
    <string name="search_hint_name">Search by name</string>
    <string name="search_hint_phone">Search by telphone</string>
    <string name="search_hint_compay">Search by company</string>
    <string name="search_null">Do not find anything,please retry!</string>
    <string name="search">Search</string>
    <string name="more">More</string>

    <string name="send_sms">Send</string>
    <string name="init">loading…</string>
    <string name="data_null">Do not find anything!</string>
    <string name="customer_null">there is no users,please add user!</string>
    <string name="sms_contact">Contact</string>
    <string name="sms_sent">send(%d)</string>
    <string name="sms_recieved">recieved(%d)</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="pop_detail">detail</string>
    <string name="pop_update">update</string>
    <string name="pop_del">delete</string>
    <string name="pop_del_msg">Are you sure to delete the user?</string>
    <string name="pop_send">Send</string>

    <string name="send_tip">Send To：</string>
    <string name="send_tip1" formatted="false">Send To：  %s( %s )</string>
    <string name="send_tip2">Send SMS：</string>
    <string name="NO.">No.</string>
    <string name="hint_way">1-5</string>
    <string name="temperature_title">temperature alarm set value</string>
    <string name="temperature_way">path temperature settings.</string>
    <string name="temperature_up_open">upper limit set</string>
    <string name="temperature_up_close">upper limit set</string>
    <string name="temperature_value_tip">warning value:</string>
    <string name="temperature_unit">degree</string>
    <string name="temperature_down_open">lower limit set</string>
    <string name="temperature_down_close"> lower limit set</string>

    <string name="hint_voltage">1-8</string>
    <string name="voltage_title">voltage alarm preset value set</string>
    <string name="voltage_way">Path voltage setting.</string>
    <string name="voltage_unit">V</string>

    <string name="tem_relay_title">the temperature limit alarm relay control set</string>
    <string name="relay_way"> road relay control settings.</string>
    <string name="vol_relay_title">voltage alarm relay control set</string>

    <string name="error_input"> entry is incorrect, please re-enter!</string>
    <string name="error_phone"> phone cannot be empty!</string>
    <string name="error_order"> temperature and voltage setting number both cannot be empty!</string>
    <string name="make_order">generate instruction</string>
    <string name="send_order">send instruction</string>
    <string name="new_customer">new user</string>

    <string name="date_choice">select date:</string>
</resources>
