<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"/>

    <item
        android:id="@+id/menu_name"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        android:orderInCategory="1"
        android:title="@string/search_hint_name"/>

    <item
        android:id="@+id/menu_phone"
        android:orderInCategory="1"
        android:title="@string/search_hint_phone"/>
    <item
        android:id="@+id/menu_compay"
        android:orderInCategory="1"
        android:title="@string/search_hint_compay"/>
</menu>